--- a/style.css
+++ b/style.css
@@ -1,9 +1,15 @@
-body, html {
+html {
     height: 100%;
+}
+
+body {
     margin: 0;
     background-color: #252525;
     font-family: 'Aref Ruqaa', serif;
-
+    position: relative;
+    min-height: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
 .header {
@@ -48,6 +54,9 @@ body, html {
     box-shadow: -4px 0px 35px 0px rgba(0,0,0,0.75);
     justify-content: center;
     align-items: center;
+    position: absolute;
+    height: 100px;
+    bottom: 0;
 }
 
 .footer p {
@@ -56,13 +65,13 @@ body, html {
     font-size: 12px;
 }
 
-.footer p:first-of-type {
+/* .footer p:first-of-type {
     margin-top: 20px;
 }
 
 .footer p:last-of-type {
     margin-bottom: 20px;
-}
+} */
 
 
 .footer span {
@@ -132,6 +141,7 @@ body, html {
 
 .offer:target {
     display: block;
+    margin-bottom: 120px;
 }
 
 @media screen and (max-width: 800px) {
